--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -7,3 +7,35 @@ a:link {
 a:hover {
   color: #d11f26;
 }
+
+
+/*************************************************
+ *  Featurette Widget
+ **************************************************/
+
+ .featurette {
+  font-size: 0.8rem;
+  line-height: 1.5;
+  color: #555;
+  text-align: center;
+}
+
+.featurette .section-subheading {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-weight: 400;
+  color: #333;
+}
+
+.dark .featurette,
+.dark .featurette .section-subheading {
+  color: #fff;
+}
+
+.featurette-icon {
+  display: block;
+  width: 100%;
+  color: $sta-primary;
+  font-size: 8rem;
+  text-align: center;
+}
